--- a/project/homepage/css/fusioncart.css
+++ b/project/homepage/css/fusioncart.css
@@ -539,3 +539,15 @@
   font-size: 18px;
   border-radius: 50%;
 }
+.nav-left .dropdown {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-left .logo {
+  white-space: nowrap;
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+}
