--- a/project/homepage/css/layout.css
+++ b/project/homepage/css/layout.css
@@ -441,7 +441,16 @@ height: 200px;
 {
 width: 200px;
 height: 200px;    
-}    
+} 
+     .middle-columns {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .mid-col img {
+        width: 90% !important;
+        margin: 10px auto;
+    }
 }
 
 /* ----------------------------- */
@@ -536,4 +545,28 @@ li
 {
     margin-left: -5px;
     text-decoration: none;    
+}
+
+/* Make the main page a vertical flex layout */
+.container2 {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Push bottom sections to the bottom */
+.bottom-sections {
+    margin-top: auto;
+}
+
+/* Layout for the middle columns */
+.middle-columns {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    gap: 20px;
+}
+
+/* Each column */
+.mid-col {
+    flex: 1;
 }
