--- a/project/homepage/fusioncommerce/css/fusioncart.css
+++ b/project/homepage/fusioncommerce/css/fusioncart.css
@@ -193,6 +193,7 @@
     padding: 15px;
   }
   
+  container2{min-height: 1000px;}
   /* ============================================================
      TABLES
      ============================================================ */
