--- a/project/part5/css/layout.css
+++ b/project/part5/css/layout.css
@@ -177,7 +177,7 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #e6e6ff;
+    background-color: #adebad;
     padding: 20px;
     border-radius: 5px;
     width: 95%;
