--- a/project/part5/pricing/css/layout.css
+++ b/project/part5/pricing/css/layout.css
@@ -479,7 +479,7 @@ height: 200px;
         margin: 0 auto;
         margin-top: 5px;
         margin-bottom: 5px;
-        background-color: #e6e6ff;
+        background-color: #adebad;
     }
    
     #miami1
