--- a/project/part5/css/greenvillemiddle.css
+++ b/project/part5/css/greenvillemiddle.css
@@ -28,6 +28,7 @@
     border-color: #4ade80;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     transform: translateY(-3px);
+    background-color: #00e673;
 }
 
 /* Feature card image */
